# mkdocs-openapi-markdown-plugin

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
src/mkdocs_openapi_markdown_plugin/: plugin.py
