[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-openapi-markdown-plugin"
version = "0.1.1"
authors = [
  { name="soonoh", email="soonoh.jung@vrerv.com" },
]
description = "Mkdocs plugin to generate openapi document markdown"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/vrerv/mkdocs-openapi-markdown-plugin"
"Bug Tracker" = "https://github.com/vrerv/mkdocs-openapi-markdown-plugin/issues"

[project.entry-points."mkdocs.plugins"]
openapi_markdown = "mkdocs_openapi_markdown_plugin.plugin:GenApiPlugin"
